# dex

./: .gitmodules  CMakeLists.txt  README.md
resources/pcb/: dexv1.brd  dexv1.sch
src/: CMakeLists.txt  FreeRTOSConfig.h  bt_hid copy.c  bt_hid.c  bt_hid.h  controls.c  controls.h  kalman.c  kalman.h  main.c  mpu6050.c  mpu6050.h  pid.c  pid.h  pinout.c  pinout.h  stepper.c  stepper.h  utils.c  utils.h
